--- a/src/app/component/home/home.component.html
+++ b/src/app/component/home/home.component.html
@@ -1,1 +1,15 @@
-<p>home works!</p>
+<div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="/assets/pig.jpg" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="/assets/bee.jpg" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="/assets/dog.jpg" class="d-block w-100" alt="...">
+    </div>
+  </div>
+</div>
+
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere laboriosam nostrum quam sunt. A alias amet aspernatur blanditiis consequatur cupiditate dignissimos, dolore dolorem eius error esse eveniet explicabo fugit illum inventore ipsam magni minima minus modi optio porro quo ratione tempora voluptas voluptate. Ad architecto cumque, delectus dolorem dolorum, ducimus et explicabo, fuga harum impedit magnam maiores minima molestiae mollitia natus nemo neque nobis nostrum officiis omnis pariatur possimus quasi quibusdam quidem repellat sapiente sunt tempora tempore temporibus tenetur ut velit vero voluptatibus? Ad assumenda cum deserunt facere harum inventore ipsum itaque quasi quidem recusandae, tempore velit. Facilis ipsam, repellendus!</p>
