--- a/src/app/component/about/about.component.html
+++ b/src/app/component/about/about.component.html
@@ -1,1 +1,1 @@
-<p>about works!</p>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate doloremque, explicabo quod recusandae tempora vel?</p>
